buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.2'
    }
}

apply plugin: "java"
apply plugin: "com.github.johnrengelman.shadow"


repositories {
    mavenCentral()
}

sourceCompatibility = 1.11
targetCompatibility = 1.11

dependencies {
    implementation "org.pcollections:pcollections:2.1.3"
    implementation "org.apache.commons:commons-io:1.3.2"
    implementation "org.apache.commons:commons-lang3:3.7"
    testImplementation "org.assertj:assertj-core:3.9.1"
    testImplementation "junit:junit:4.12"
}

test {
    testLogging {
        outputs.upToDateWhen {false}
        exceptionFormat = 'full'
        showStandardStreams = true
    }
}
shadowJar {
    zip64 true
    mergeServiceFiles()
    archiveName = "build-" + System.getenv("VERSION") + ".jar"
}
jar.finalizedBy(project.shadowJar)